fixed featured icon alignment and added methods for fetching previous and next submissions.

--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -214,7 +214,7 @@ div.submission div.meta { padding: 0 0 0 10px; }
 div.submission div.meta li { padding-left: 20px; }
 
 div.submission div.meta li#featured{ 
-  padding-top: 10px;
+  margin-top: 10px;
   line-height: 20px;
   background: url(/images/featured.png) no-repeat left center;
 }
